--- a/styles.css
+++ b/styles.css
@@ -641,18 +641,19 @@ p {
 
   }
 
-  .h2-h2 {
+  .h4-h4 {
     font-family: 'OTNeueMontreal-MediumSqueezed', sans-serif; /* Tipografía personalizada */
-    font-size: 8rem; /* Ajusta el tamaño de las letras */
+    font-size: 3.5rem; /* Ajusta el tamaño de las letras */
     color: red; /* Color de las letras */
     display: flex;
     align-items: center; /* Centra las letras verticalmente */
     justify-content: flex-start; /* Alinea el texto a la izquierda */
     margin: 0; /* Elimina cualquier margen */
     padding: 0; /* Elimina cualquier relleno */
-    letter-spacing: -0.3rem; /* Ajusta la separación entre letras (puedes cambiar el valor según lo necesites) */
+    letter-spacing: -0.1rem; /* Ajusta la separación entre letras (puedes cambiar el valor según lo necesites) */
     width: fit-content; /* Ajusta el contenedor al contenido del texto */
-    line-height: 8rem;
+    line-height: 1em;
+    padding-top: 2rem;
   }
   
 }
