--- a/styles.css
+++ b/styles.css
@@ -31,9 +31,10 @@
 }
 
 
-body {
-  cursor:url("/images/cursor.cur") , auto;}
-
+* {
+  cursor: url('images/cursor2.png'), default ;
+  
+}
 
 header {
   display: flex;
@@ -705,6 +706,22 @@ p {
   }
   
 }
+/* 
+@media (max-width: 768px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    width: 100%;
+    padding: 0 1rem;
+  }
+
+  .grid-container img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+} */
 
 
 
