--- a/styles.css
+++ b/styles.css
@@ -346,6 +346,18 @@ para asegurar que se puedan clikar los link
   left: -7rem;
 }
 
+.footer_rights {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  gap: 2rem;
+  position: relative;
+  top: -140%;
+  z-index: -2;
+  pointer-events: none;
+}
+
 /* ========================
    10. Estilos de texto genéricos
    ======================== */
