--- a/styles.css
+++ b/styles.css
@@ -392,45 +392,39 @@ p {
 
 /* ===============================
    11. About
-   =============================== */
+   =============================== */ 
 
-  .hero-section {
-    position: relative; 
-    overflow: hidden;  
-   
+
+  .about-section {
+    position: relative;
+    min-height: 80vh;
+
   }
-  
+
   .background-gif {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    right: 20rem;
+    top: 7rem;
+    width: 20%;
+    height: 80%;
     z-index: 0; /* Debe estar por debajo del contenido (z-index: 10 en content-overlay) */
-    background-image: url('gifs\Giff_about.gif'); /* Reemplaza con la ruta correcta */
-    background-size: cover;       /* O 'contain', según el efecto deseado */
-    background-position: center;
+    background-image: url('gifs/Giff_about.gif'); /* Reemplaza con la ruta correcta */
+    background-size: contain;       /* O 'contain', según el efecto deseado */
     background-repeat: no-repeat;
+    transform: rotate(15deg);
   }
-  
-  
- 
+   
   .content-overlay {
     position: absolute; 
-    top: 0;
+    top: 10rem;
     left: 0;
     width: 100%; 
     height:auto; 
-    z-index: 10;  
-    padding-top: 10rem; 
-  }
-  
-  .max-w-2xl {
-    max-width:auto; /
-  
-  }
-  
+    z-index: 2;  
+    padding-top: 2rem; 
 
+  }
+  
 /* ===============================
    12. Media queries para phone
    =============================== */
@@ -448,10 +442,32 @@ p {
     width: 100%;
     min-height: 100vh; /* Asegura que llene toda la altura visible */
   }
+
+  /*
+  =====
+  ABOUT
+  =====
+  */
+  .about-section {
+    /* Puedes ajustar la altura mínima si lo necesitas */
+    min-height: 70vh;
+  }
+
+  .background-gif{
+    height: 100%;
+    width: 40%;
+    right:8rem;
+  }
+
+
+
   .content-overlay {
-    position: relative;
-    padding-top: 2rem; /* Ajusta este valor según lo que necesites */
-   }
+    position: relative; /* Cambiamos a relative para evitar que se superponga demasiado */
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+  }
   /*
   ====== 
   Header
