--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,17 @@ main {
   object-fit: cover;
 }
 
+.grid-container-2{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.gallery-item-2 img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
 /* ========================
    6. Video containers
    ======================== */
@@ -459,8 +470,6 @@ p {
     right:8rem;
   }
 
-
-
   .content-overlay {
     position: relative; /* Cambiamos a relative para evitar que se superponga demasiado */
     top: 0;
@@ -501,6 +510,10 @@ p {
   .grid-container {
 
     grid-template-columns: repeat(3, 1fr);
+  }
+  .grid-container-2{
+
+    grid-template-columns: repeat(1, 1fr);
   }
 
   /* 
