--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,11 @@ html, body {
   -webkit-text-size-adjust: 100%; /* resolver problemas con safari */
 }
 
+
+
 .container {
   width: 100%;
-  min-height: 100vh; 
+  min-height: auto; 
 }
 
 
@@ -277,6 +279,8 @@ main {
    ======================== */
 footer {
   height: 10rem;
+
+    margin-top: auto; /* Empuja el footer hacia abajo si hay espacio disponible */
 }
 
 .foot1,
@@ -401,23 +405,45 @@ p {
   width: fit-content;
 }
 
+
+
 /* ===============================
    11. About
    =============================== */ 
-
+  #aboutMain {
+    display: block; /* Evita que se expanda innecesariamente */
+    height: auto !important; /* Se ajusta al contenido */
+    min-height: 0;
+    padding: 0;
+    margin: 0;
+  }
+  #aboutMain, .about-section {
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  
+  #divGeneral{
+    min-height: 50rem;
+  }
 
   .about-section {
     position: relative;
-    min-height: 80vh;
+    min-height: 40vh;
+    margin: 0 !important;
+    padding: 0;
 
+  }
+
+  .about-section p {
+    max-width: 70%;
   }
 
   .background-gif {
     position: absolute;
-    right: 20rem;
-    top: 7rem;
+    right: 7rem;
+    top: 5rem;
     width: 20%;
-    height: 80%;
+    height: 100%;
     z-index: 0; /* Debe estar por debajo del contenido (z-index: 10 en content-overlay) */
     background-image: url('gifs/Giff_about.gif'); /* Reemplaza con la ruta correcta */
     background-size: contain;       /* O 'contain', según el efecto deseado */
@@ -427,13 +453,13 @@ p {
    
   .content-overlay {
     position: absolute; 
-    top: 10rem;
+    top: 2rem;
     left: 0;
     width: 100%; 
     height:auto; 
     z-index: 2;  
-    padding-top: 2rem; 
-
+    margin: 0;
+    padding: 0;
   }
   
 /* ===============================
@@ -516,6 +542,8 @@ p {
   main {
     display: flex;
     flex-direction:column;
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
   }
   .grid-container {
 
